<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/action_replay"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/replay"
        android:title="@string/replay"/>
    
    <item
        android:id="@+id/action_score"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/score"
        android:title="@string/score"/>
    
    <item
        android:id="@+id/action_pass"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/pass"
        android:title="@string/pass"/>

</menu>