<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartScreen" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reversi"
        android:textSize="56sp" />
    
    <Button
        android:id="@+id/buttonSinglePlayerGame"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/single_player" />
    
    <Button
        android:id="@+id/buttonTwoPlayerGame"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/two_player" />
   
    <Button
        android:id="@+id/buttonHighScore"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/high_score" />
    
    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings" />
    

</LinearLayout>